--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,8 +9,11 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 kotlinxSerializationJson = "1.6.3"
 ktorClientAndroid = "2.3.5"
+ktorClientContentNegotiation = "2.3.4"
 ktorClientCore = "2.3.5"
 ktorClientLogging = "2.3.5"
+ktorClientOkhttp = "2.3.4"
+ktorSerializationGson = "2.3.4"
 ktorSerializationKotlinxJson = "2.3.5"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
@@ -51,8 +54,11 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 #Ktor-client
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorClientAndroid" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktorClientContentNegotiation" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientCore" }
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorClientLogging" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktorClientOkhttp" }
+ktor-serialization-gson = { module = "io.ktor:ktor-serialization-gson", version.ref = "ktorSerializationGson" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorSerializationKotlinxJson" }
 
 #Room
