--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ kotlinxSerializationJson = "1.6.3"
 ktorClientAndroid = "2.3.5"
 ktorClientContentNegotiation = "2.3.4"
 ktorClientCore = "2.3.5"
+ktorClientCoreVersion = "2.3.4"
 ktorClientLogging = "2.3.5"
 ktorClientOkhttp = "2.3.4"
 ktorSerializationGson = "2.3.4"
@@ -27,6 +28,7 @@ retrofit = "2.9.0"
 room = "2.6.1"
 ksp = "2.1.20-1.0.32"
 secretsGradlePlugin = "2.0.1"
+runtimeLivedata = "1.7.8"
 
 [libraries]
 androidx-activity-compose-v180 = { module = "androidx.activity:activity-compose", version.ref = "activityComposeVersion" }
@@ -56,6 +58,7 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorClientAndroid" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktorClientContentNegotiation" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientCore" }
+ktor-client-core-v234 = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientCoreVersion" }
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorClientLogging" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktorClientOkhttp" }
 ktor-serialization-gson = { module = "io.ktor:ktor-serialization-gson", version.ref = "ktorSerializationGson" }
@@ -69,6 +72,7 @@ androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref =
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 secrets-gradle-plugin = { module = "com.google.android.libraries.mapsplatform:secrets-gradle-plugin", version.ref = "secretsGradlePlugin" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 
 [plugins]
