--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileWeatherApp"
         android:usesCleartextTraffic="false"
-        tools:targetApi="31">
+        tools:targetApi="35">
         
         <activity
-            android:name=".MainActivity"
+            android:name=".frontend.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MobileWeatherApp">
